# Graphitron

./: CMakeLists.txt  LICENSE  README.md
.VSCodeCounter/2023-10-30_14-59-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-10-30_14-59-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2023-11-06_13-03-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2023-11-06_13-04-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-06_13-04-27/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
GraphIt/include/graphit/backend/: backend.h  codegen_cpp.h
GraphIt/include/graphit/frontend/: fir.h  fir_printer.h  fir_visitor.h  high_level_schedule.h  parser.h  schedule.h  token.h
GraphIt/include/graphit/midend/: mir.h  mir_emitter.h  mir_rewriter.h  mir_visitor.h
GraphIt/include/graphit/utils/: command_line.h
GraphIt/src/: graphitc.py  main.cpp
GraphIt/src/backend/: backend.cpp  codegen_cpp.cpp
GraphIt/src/frontend/: fir.cpp  fir_printer.cpp  fir_visitor.cpp  high_level_schedule.cpp  parser.cpp  scanner.cpp  token.cpp
GraphIt/src/midend/: mir.cpp  mir_emitter.cpp  mir_rewriter.cpp  mir_visitor.cpp
GraphIt/test/input_with_schedules/: thundergp_pr.gt
GraphIt/test/thundergp_input/: pagerank_thundergp.gt
ThunderGP/: .gitignore  ThunderGP.mk  sample_link.ini
ThunderGP/application/: testconfig.mk  testdataPrepare.cpp  testl2.h
ThunderGP/libfpga/: fpga_global_mem.h
ThunderGP/libgraph/misc/: data_helper.cpp
apps/: acc_test.gn  bfs.gn  bfs2.gn  bfs_combine.gn  bfs_ecp copy.gn  bfs_ecp.gn  bfs_ecp_gp.gn  bfs_gas.gn  bfs_vcp.gn  bfs_vcp_asyn.gn  burst_test.gn  pagerank.gn  pagerank_delta.gn  ppt_bfs.gn  ppt_pr.gn  pr_delta.gn  proc.gn  proc_vp.gn  sssp.gn  test.gn
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/src/: Makefile
include/facet/backend/: backend.h  gen_Expr.h  gen_ScatterGather_decl.h  gen_acc.h
include/facet/frontend/: error.h  fir.h  fir_context.h  fir_printer.h  fir_visitor.h  frontend.h  high_level_schedule.h  low_level_schedule.h  parser.h  scanner.h  schedule.h  token.h
include/facet/midend/: label_scope.h  midend.h  mir.h  mir_context.h  mir_emitter.h  mir_lower.h  mir_printer.h  mir_visitor.h  schedule.h  schedule_space.h  var.h
include/facet/utils/: command_line.h  exec_cmd.h  scopedmap.h  util.h
include/graphitron/backend/: backend.h  codegen.h  codegen_alpha.h  codegen_ecp.h  gen_Apply_decl.h  gen_Expr.h  gen_ScatterGather_decl.h  gen_Stmt.h  gen_Type.h  gen_acc.h
include/graphitron/frontend/: error.h  fir.h  fir_context.h  fir_printer.h  fir_visitor.h  frontend.h  parser.h  scanner.h  token.h
include/graphitron/midend/: configuration_lower.h  edgeset_lower.h  label_scope.h  midend.h  mir.h  mir_context.h  mir_emitter.h  mir_lower.h  mir_printer.h  mir_rewriter.h  mir_visitor.h  parameter.h  parameter_space.h  processkernel_lower.h  prop_array_lower.h  schedule.h  schedule_space.h  var.h
include/graphitron/utils/: command_line.h  exec_cmd.h  scopedmap.h  util.h
lib/0/libgraph/: host_graph_api.h  host_graph_data_structure.h  host_graph_partition.cpp  intrinsics.h
lib/0/libgraph/kernel/: host_graph_kernel.cpp  host_graph_kernel.h
lib/0/libgraph/memory/: he_mapping.cpp  he_mem.cpp  he_mem.h  he_mem_attr.h  he_mem_config.h  he_mem_id.h
lib/0/libgraph/misc/: data_helper.cpp  host_graph_mem.cpp  host_graph_mem.h
lib/0/libgraph/xcl/: xcl.c
lib/0/template/kernel/: alpha_kernel.cpp  alpha_kernel.mk  ep_kernel.cpp  ep_kernel.mk  vp_kernel.cpp  vp_kernel.mk
lib/1/libfpga/: fpga_application.h  graph_fpga.h
lib/1/libgraph/: host_graph_api.h  host_graph_data_structure.h  host_graph_dataflow.cpp  host_graph_partition.cpp  host_graph_sw.h  intrinsics.h
lib/1/libgraph/memory/: he_mem.cpp  he_mem_config.h
lib/1/libgraph/misc/: graph.cpp  host_graph_mem.cpp
lib/1/template/app/: config.mk
lib/1/template/kernel/: gs_kernel.cpp
lib/libfpga/: acc_cacheburst.h  acc_gather.h  acc_parameters.h  acc_stream.h  fpga_apply.h
lib/libgraph/: host_graph_api.h  host_graph_data_structure.h  host_graph_dataflow.cpp  host_graph_partition.cpp  host_graph_sw.h  intrinsics.h
lib/libgraph/kernel/: host_graph_kernel.cpp
lib/libgraph/memory/: he_mem.cpp  he_mem_config.h  he_mem_id.h
lib/libgraph/misc/: data_helper.cpp  host_graph_mem.cpp  host_graph_mem.h
lib/libgraph/scheduler/: scheduler.cpp
lib/libgraph/xcl/: xcl.mk
lib/template/app/: build.mk  dataPrepare.cpp  l2.h  replace.cpp
lib/template/kernel/: apply_kernel.cpp  apply_kernel.mk  ep_kernel.cpp  gs_kernel.mk  vp_kernel.cpp  vp_kernel.mk
libfpga/: fpga_apply.h
libgraph/: default_entry.cpp  host_graph_api.h  host_graph_dataflow.cpp  host_graph_partition.cpp
libgraph/kernel/: host_graph_kernel.cpp
libgraph/memory/: he_mapping.cpp  he_mem_config.h
libgraph/misc/: data_helper.cpp
mks/: Graphitron.mk  Makefile
mks/utils/: bitstream.mk  clean.mk  common.mk  compile.mk  help.mk  main.mk  opencl.mk  utils.mk
src/: default_schedule.cpp  facetc.py  graphitronc.py  main.cpp
src/backend/: backend.cpp  codegen.cpp  codegen_alpha.cpp  codegen_ecp.cpp  gen_Apply_decl.cpp  gen_Expr.cpp  gen_ScatterGather_decl.cpp  gen_Stmt.cpp  gen_Type.cpp  gen_acc.cpp
src/frontend/: error.cpp  fir.cpp  fir_printer.cpp  fir_visitor.cpp  frontend.cpp  parser.cpp  scanner.cpp  token.cpp
src/midend/: configuration_lower.cpp  edgeset_lower.cpp  midend.cpp  mir.cpp  mir_context.cpp  mir_emitter.cpp  mir_lower.cpp  mir_printer.cpp  mir_visitor.cpp  mri_rewriter.cpp  parameter.cpp  parameter_space.cpp  processkernel_lower.cpp  prop_array_lower.cpp  schedule.cpp  schedule_space.cpp
src/utils/: exec_cmd.cpp  util.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
test/src/: Makefile  cmake_install.cmake
(+2 files in other folders)
