element Vertex end
element Edge end
const edges : edgeset{Edge}(Vertex, Vertex) = load(argv[1]);
const vertices : vertexset{Vertex} = edges.getVertices();
const prop : vector{Vertex}(int);
const degree : vector{Vertex}(int) = vertices.getOutDegrees();

func reset(v : Vertex)
    prop[v]=1;
end

func calc(v : Vertex)
    prop[v] = prop[v] + 1;
end

func sum(v : Vertex)
    for ng in v.getNeighbors()
        prop[ng] = v + ng;
    end
end

func res_print()
    for i in 0:10
        print prop[i];
    end
    println "";
end

func main()
    vertices.init(reset);
    edges.partition();
    vertices.process(sum);
    vertices.process(calc);
    prop.update();
    res_print();
end